# aldar

./: Cargo.toml  LICENSE  README.md
src/: aldar.rs  fsutil.rs  main.rs
